--- a/mc_forms.css
+++ b/mc_forms.css
@@ -58,3 +58,10 @@ select {
     margin-left: auto;
     margin-right: auto;
 }
+
+section#buttons {
+    display: block;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 10px;
+}
